move exception handling

--- a/FodyVSPackage/ExceptionHandling/ExceptionWindow.xaml
+++ b/FodyVSPackage/ExceptionHandling/ExceptionWindow.xaml
@@ -6,7 +6,7 @@
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Styles.xaml"/>
+                <ResourceDictionary Source="../Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
